syntax = "proto3";

option csharp_namespace = "PostService.API.GRPC.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service GRPCMessagesController {
	rpc GetMessages (GRPCMessageRequest) returns (GRPCMessageResponse);
}

message GRPCMessageRequest {
	string threadID = 1;
}

message GRPCMessageResponse {
	repeated GRPCMessage messages = 1;
}

message GRPCMessage {
    string threadId = 1;              // Guid threadId
    string userId = 2;                 // Guid userId
    string content = 3;                // string msg
    int32 likesQuantity = 4;           // int likesQuantity
    int32 dislikesQuantity = 5;        // int dislikeQuantity
    google.protobuf.Timestamp createdAt = 6;  // DateTime createTime
    google.protobuf.StringValue parentMessageId = 7;  // Guid? parentMessageId (nullable)
}